# dbg

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  __main.cpp  elf_parser.cpp  elf_parser.h  elf_section.cpp  elf_section.h  elf_types.h  init.cpp  init.h  main.cpp  str_serializer.cpp  str_serializer.h
cmake_local/: DBGClangFlags.cmake  DBGDefaultFlags.cmake
data/asm/: simplest_64bit_program.asm
data/test_binaries/: simplest_64bit_program
include/: basic.h  dbg.h  memory_pool.h  stack_allocator.h
include/ELF/: elf.h  types.h
scripts/: build_asm.sh
src/: basic.cpp  stack_allocator.cpp
